--- a/pom.xml
+++ b/pom.xml
@@ -76,4 +76,13 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
+    <scm>
+        <connection>scm:git:git://github.com:mulesoft/getsatisfaction-connector.git
+        </connection>
+        <developerConnection>
+            scm:git:git@github.com:mulesoft/getsatisfaction-connector.git
+        </developerConnection>
+        <url>http://github.com/mulesoft/getsatisfaction-connector</url>
+    </scm>
 </project>
