--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>${mule.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-json</artifactId>
+            <version>${mule.version}</version>
+        </dependency>
+        <dependency>
         	<groupId>com.gsfn</groupId>
         	<artifactId>fastpass</artifactId>
         	<version>1.0.0</version>
