--- a/doc/mule-module-getsatisfaction.xml.sample
+++ b/doc/mule-module-getsatisfaction.xml.sample
@@ -26,19 +26,22 @@
 <getsatisfaction:get-replies-by-user userId="001"/>
 <!-- END_INCLUDE(getsatisfaction:get-replies-by-user) -->
 <!-- BEGIN_INCLUDE(getsatisfaction:create-topic-at-company) -->
-<getsatisfaction:create-topic-at-company companyId="mulesoft" subject="test for product affiliate" style="PRAISE"
-                                         additionalDetail="additional detail goes here">
-    <getsatisfaction:keywords>
-        <getsatisfaction:keyword>keyword</getsatisfaction:keyword>
-    </getsatisfaction:keywords>
-    <getsatisfaction:products>
-        <getsatisfaction:product>muleion</getsatisfaction:product>
-    </getsatisfaction:products>
+<getsatisfaction:create-topic-at-company companyId="mulesoft">
+    <getsatisfaction:topic subject="test for product affiliate" content="additional detail goes here" style="PRAISE">
+        <getsatisfaction:products>
+            <getsatisfaction:product name="muleion"/>
+        </getsatisfaction:products>
+        <getsatisfaction:keywords>
+            <getsatisfaction:keyword>keyword</getsatisfaction:keyword>
+        </getsatisfaction:keywords>
+    </getsatisfaction:topic>
 </getsatisfaction:create-topic-at-company>
 <!-- END_INCLUDE(getsatisfaction:create-topic-at-company) -->
 <!-- BEGIN_INCLUDE(getsatisfaction:create-reply-for-topic) -->
-<getsatisfaction:create-reply-for-topic companyId="mulesoft" idOrSlug="001" reply-ref=""/>
-<!-- END_INCLUDE(getsatisfaction:transform-reply-for-topic) -->
+<getsatisfaction:create-reply-for-topic idOrSlug="001">
+    <getsatisfaction:reply ref=""/>
+</getsatisfaction:create-reply-for-topic>
+<!-- END_INCLUDE(getsatisfaction:create-reply-for-topic) -->
 <!-- BEGIN_INCLUDE(getsatisfaction:transform-json-to-topic) -->
 <getsatisfaction:transform-json-to-topic/>
 <!-- END_INCLUDE(getsatisfaction:transform-json-to-topic) -->
