--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.3.1-SNAPSHOT</version>
+        <version>3.3.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,14 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>mule-module</packaging>
     <name>Mule GetSatisfaction Connector</name>
-
+	
+	<properties>
+        <mule.version>3.3.0</mule.version>
+        <category>Standard</category>
+        <licensePath>LICENSE.md</licensePath>
+        <devkit.studio.package.skip>false</devkit.studio.package.skip>
+    </properties>
+	
     <dependencies>
         <dependency>
             <groupId>org.mule.transports</groupId>
@@ -51,6 +58,18 @@
             <url>http://repository.mulesoft.org/snapshots/</url>
             <layout>default</layout>
         </repository>
+        <repository>
+		    <id>mule-ee-snapshot</id>
+		    <name>EE Repository Snapshots</name>	
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/snapshots</url>
+		    <layout>default</layout>
+		  </repository>
+		  <repository>
+		    <id>mule-ee</id>
+		    <name>EE Repository Releases</name>	
+		    <url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
+		    <layout>default</layout>
+		  </repository>
     </repositories>
 
     <pluginRepositories>
